# pygarmin

./: .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  README.txt  app  datum.py  dev_README.TXT  dev_format.py  dev_garmin.py  dev_pygarmin  garmin.py  gnome-pygarmin  gnome-pygarmin.glade  gnome-pygarmin.gladep  index.html  newstruct.py  pygarmin  refdatum.py  requirements.txt  setup.cfg  setup.py  xmlwriter.py
debian/: changelog  control  copyright  examples  rules
docs/: requirements.txt
docs/source/: almanac_datatypes.rst  api.rst  application_protocol.rst  base_datatype.rst  common_datatypes.rst  conf.py  datatypes.rst  date_time_datatypes.rst  exceptions.rst  external_time_sync_datatypes.rst  flightbook_record_datatypes.rst  image_datatypes.rst  index.rst  link_protocol.rst  map_datatypes.rst  memory_datatypes.rst  miscellaneous_datatypes.rst  physical_protocol.rst  position_datatypes.rst  product_datatypes.rst  protocol_datatypes.rst  protocols.rst  proximity_waypoint_datatypes.rst  pvt_datatypes.rst  pygarmin.rst  route_header_datatypes.rst  route_link_datatypes.rst  satellite_datatypes.rst  screenshot_datatypes.rst  track_header_datatypes.rst  track_point_datatypes.rst  transmission_protocol.rst  waypoint_category_datatypes.rst  waypoint_datatypes.rst
pygarmin.xcode/: README.txt  project.pbxproj
src/garmin/: garmin.py  pygarmin.py
src/pygarmin/: capabilities.py  datatype.py  error.py  fit.py  garmin.py  gpsd.py  gpx.py  link.py  logger.py  protocol.py  pygarmin.py
src/pygarmin/garmin/: garmin.py
src/pygarmin/gpx/: gpx.py
