[metadata]
name = pygarmin
version = attr: garmin.__version__
license = GNU General Public License version 3
description = A Python interface to older Garmin GPS equipment
long_description = file: README.md
long_description_content_type = text/markdown
author = Folkert van der Beek
email_email = folkertvanderbeek@gmail.com
url = http://github.com/quentinsf/pygarmin
project_urls =
    Homepage = https://github.com/quentinsf/pygarmin
    Bug Tracker = https://github.com/quentinsf/pygarmin/issues
keywords = garmin, gps
python_requires = >=3.8
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware :: Hardware Drivers
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    gpxpy >=1.5.0
    Pillow >=9.3.0
    pyserial >=3.5
    pyusb >=1.2.1
    rawutil >=2.7.4
    tabulate >=0.9.0
    tqdm >=4.64.1
scripts =
    bin/pygarmin

[options.packages.find]
where = src
